@@ -1,3 +1,10 @@
+2012-04-08  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: The "--split parts:" functionality was
+	producing a small gap between the first part's last packet's
+	timecode and the second part's first packet's timecode if two
+	parts are written to the same file. Fixes ticket 742.
+
 2012-04-07  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: The "--split parts:" functionality was
